--- a/project.json
+++ b/project.json
@@ -12,6 +12,8 @@
 
     "jsList" : [
         "src/resource.js",
-        "src/app.js"
+        "src/app.js",
+        "src/player.js",
+        "src/car.js"
     ]
 }
