- added game over screen

--- a/project.json
+++ b/project.json
@@ -20,6 +20,7 @@
 		"src/paint.js",
 		"src/tools.js",
 		"src/trash.js",
-		"scr/carpopup.js"
+		"scr/carpopup.js",
+		"src/GameOverScene.js"
     ]
 }
