- Added Start Screen

--- a/project.json
+++ b/project.json
@@ -21,6 +21,7 @@
 		"src/tools.js",
 		"src/trash.js",
 		"src/rat.js",
-		"src/GameOverScene.js"
+		"src/GameOverScene.js",
+		"src/StartScreen.js"
     ]
 }
