added conveyor belts (a massive wall of code)

--- a/project.json
+++ b/project.json
@@ -15,6 +15,7 @@
         "src/app.js",
         "src/player.js",
         "src/car.js",
+	"src/cbelt.js",
 		"src/crate.js",
 		"src/item.js",
 		"src/paint.js",
